--- a/client/src/components/topbar/topBar.scss
+++ b/client/src/components/topbar/topBar.scss
@@ -10,9 +10,11 @@
   font-family: "Josefin Sans", sans-serif;
 
   .barIcon {
-    color: black;
+    color: teal;
     cursor: pointer;
-    display: none;
+    margin-left: 5px;
+    margin-right: 5px;
+    // display: none;
   }
 
   .sideBar {
@@ -98,11 +100,24 @@
 
     .topSearchIcon {
       color: teal;
-      margin-left: 10px;
+      // margin-left: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 20px;
+      padding-right: 10px;
+      cursor: pointer;
+    }
+    .searchInput{
+      width:80%;
+      height:100%;
+      border: none;
+      border-radius: 26px;
+      outline: none;
+      padding-left: 10px;
+      padding-right: 30px;
+
+      
     }
   }
 
@@ -173,7 +188,6 @@
 
     .topLeft {
       flex: 1.4;
-      // background-color: yellow;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -182,10 +196,12 @@
     .searchCon {
       width: 160px;
     }
+    .sideBar{
+      margin-left: -10px;
+      color: white;
+    }
 
-    // .topCenter {
-    // background-color: red;
-    // }
+    
     .topRight {
       .topList {
         .topListItems {
@@ -220,7 +236,6 @@
 
     .topLeft {
       flex: 1.4;
-      // background-color: yellow;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -423,10 +438,11 @@
       font-size: 26px;
     }
     .sideBar {
-      background-color: teal;
+      margin-left: -20px;
+      color: white;
       height: 100vh;
       width: 32vw;
-      margin-top: 400px;
+      
 
       .drawerSliderWrapper {
         gap: 20px;
