--- a/client/src/components/topbar/topBar.scss
+++ b/client/src/components/topbar/topBar.scss
@@ -10,13 +10,18 @@
   font-family: "Josefin Sans", sans-serif;
 
   .barIcon {
-    color: teal;
+    color: rgb(7, 176, 176);
     cursor: pointer;
-    margin-left: 5px;
+    margin-left: 20px;
     margin-right: 5px;
-    // display: none;
-  }
+    font-size: 35px;
 
+    &:hover {
+      color: rgb(4, 119, 119);
+      transition: all 0.3s ease-in-out;
+    }
+  }
+  // SideBar-----------------
   .sideBar {
     background-color: teal;
     height: 100vh;
@@ -24,6 +29,7 @@
     margin-top: 400px;
     position: absolute;
     top: -400px;
+    color: white;
 
     .drawerSliderWrapper {
       margin-left: 50px;
@@ -97,27 +103,30 @@
     display: flex;
     align-items: center;
     margin-top: 5px;
+    // background-color: red;
 
     .topSearchIcon {
       color: teal;
-      // margin-left: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 20px;
-      padding-right: 10px;
       cursor: pointer;
+      margin-right: 10px;
     }
-    .searchInput{
-      width:80%;
-      height:100%;
+    .searchInput {
+      width: 95%;
+      height: 100%;
       border: none;
       border-radius: 26px;
       outline: none;
       padding-left: 10px;
-      padding-right: 30px;
+      padding-right: 10px;
+    }
 
-      
+    .searchInput::placeholder {
+      font-size: 15px;
+      font-weight: 500;
     }
   }
 
@@ -134,7 +143,7 @@
       .topListItems {
         margin-right: 20px;
         font-size: 18px;
-        font-weight: 500;
+        font-weight: 600;
         cursor: pointer;
 
         .link {
@@ -142,16 +151,8 @@
 
           &:hover {
             color: teal;
-            border-bottom: 2px solid teal;
-            padding-bottom: 3px;
-            font-weight: 600;
-            transition: all 0.2s ease-out;
           }
         }
-        // .navToggle {
-        //   color: red;
-        //   background-color: red;
-        // }
       }
     }
   }
@@ -163,20 +164,19 @@
     justify-content: center;
 
     .topImg {
-      width: 40px;
-      height: 40px;
+      width: 38px;
+      height: 38px;
       border-radius: 50%;
       object-fit: cover;
       cursor: pointer;
       border: 2px solid teal;
       overflow: hidden;
+      margin-right: 20px;
     }
-
-    .topSearchIcon {
-      font-size: 20px;
-      color: #666;
-      cursor: pointer;
-      margin-left: 30px;
+    .topList {
+      .topListItems {
+        color: rgb(14, 13, 13);
+      }
     }
   }
 }
@@ -196,12 +196,11 @@
     .searchCon {
       width: 160px;
     }
-    .sideBar{
+    .sideBar {
       margin-left: -10px;
       color: white;
     }
 
-    
     .topRight {
       .topList {
         .topListItems {
@@ -442,7 +441,6 @@
       color: white;
       height: 100vh;
       width: 32vw;
-      
 
       .drawerSliderWrapper {
         gap: 20px;
