--- a/client/src/components/topbar/topBar.scss
+++ b/client/src/components/topbar/topBar.scss
@@ -1,9 +1,8 @@
 .topBarCon {
-  padding-top: 2px;
   width: 100%;
   height: 50px;
   position: sticky;
-  top: 0;
+  top: 10px;
   z-index: 999;
   display: flex;
   align-items: center;
@@ -30,6 +29,7 @@
     position: absolute;
     top: -400px;
     color: white;
+    margin-top: 385px;
 
     .drawerSliderWrapper {
       margin-left: 50px;
@@ -77,6 +77,7 @@
   }
 
   .topLeft {
+    // background-color: pink;
     flex: 3;
     display: flex;
     align-items: center;
@@ -92,47 +93,48 @@
         color: teal;
       }
     }
-  }
 
-  .searchCon {
-    width: 200px;
-    height: 34px;
-    background-color: white;
-    border: 1.5px solid teal;
-    border-radius: 26px;
-    display: flex;
-    align-items: center;
-    margin-top: 5px;
-    // background-color: red;
-
-    .topSearchIcon {
-      color: teal;
+    .searchCon {
+      width: 200px;
+      height: 34px;
+      background-color: white;
+      border: 1.5px solid teal;
+      border-radius: 26px;
       display: flex;
       align-items: center;
-      justify-content: center;
-      font-size: 20px;
-      cursor: pointer;
-      margin-right: 10px;
-    }
-    .searchInput {
-      width: 95%;
-      height: 100%;
-      border: none;
-      border-radius: 26px;
-      outline: none;
-      padding-left: 10px;
-      padding-right: 10px;
-    }
+      margin-top: 5px;
+      // background-color: red;
 
-    .searchInput::placeholder {
-      font-size: 15px;
-      font-weight: 500;
+      .topSearchIcon {
+        color: teal;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        cursor: pointer;
+        margin-right: 10px;
+      }
+      .searchInput {
+        width: 95%;
+        height: 100%;
+        border: none;
+        border-radius: 26px;
+        outline: none;
+        padding-left: 10px;
+        padding-right: 10px;
+      }
+
+      .searchInput::placeholder {
+        font-size: 15px;
+        font-weight: 500;
+      }
     }
   }
 
-  .topCenter,
-  .topRight {
-    flex: 6;
+  .topCenter {
+    flex: 4;
+    display: flex;
+    // background-color: red;
 
     .topList {
       display: flex;
@@ -162,6 +164,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    // background-color: yellow;b
 
     .topImg {
       width: 38px;
@@ -174,183 +177,58 @@
       margin-right: 20px;
     }
     .topList {
+      display: flex;
       .topListItems {
         color: rgb(14, 13, 13);
-      }
-    }
-  }
-}
+        list-style: none;
+        margin-right: 20px;
+        font-size: 18px;
+        font-weight: 600;
+        cursor: pointer;
 
-//1200=============================================
-@media only screen and (max-width: 1200px) {
-  .topBarCon {
-    padding: 20px 10px;
-
-    .topLeft {
-      flex: 1.4;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .searchCon {
-      width: 160px;
-    }
-    .sideBar {
-      margin-left: -10px;
-      color: white;
-    }
-
-    .topRight {
-      .topList {
-        .topListItems {
-          margin-right: 20px;
-          font-size: 14px;
-          font-weight: 600;
-
-          .link {
-            font-size: 16px;
-            font-weight: 600;
-          }
+        &:hover {
+          color: teal;
         }
       }
     }
+  }
+}
 
-    .topRight {
-      .topImg {
-        margin-left: 10px;
-        margin-right: 20px;
-        margin-top: 5px;
-        width: 36px;
-        height: 36px;
-      }
+@media only screen and (max-width: 1400px) {
+  .topBarCon {
+    .sideBar {
+      height: 200vh;
+      width: 30vw;
+    }
+    .topIcon {
+      display: none;
     }
   }
 }
 
-//1000==============================================
+@media only screen and (max-width: 1100px) {
+  .topBarCon {
+    .sideBar {
+      height: 200vh;
+      width: 30vw;
+    }
+  }
+}
+
 @media only screen and (max-width: 1000px) {
   .topBarCon {
-    padding: 20px 10px;
-
-    .topLeft {
-      flex: 1.4;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .searchCon {
-      width: 160px;
-    }
-
-    // .topCenter {
-    //   // background-color: red;
-    // }
-    .topRight {
-      flex: 1;
-      // background-color: pink;
-      .topList {
-        display: none;
-      }
-    }
-  }
-}
-
-//8000==============================================
-@media only screen and (max-width: 800px) {
-  .topBarCon {
-    padding: 20px 10px;
-
-    .topLeft {
-      display: none;
-    }
-
-    .searchCon {
-      width: 160px;
-    }
-
-    // .topCenter {
-    // background-color: red;
-    // }
-    .topRight {
-      flex: 1;
-      // background-color: pink;
-      .topList {
-        display: none;
-      }
-    }
-  }
-}
-
-//700==============================================
-@media only screen and (max-width: 700px) {
-  .topBarCon {
-    padding: 20px 10px;
-
-    .topLeft {
-      display: none;
-    }
-
-    .searchCon {
-      width: 160px;
-    }
-
-    // .topCenter {
-    // background-color: red;
-    // }
-    .topRight {
-      display: none;
-    }
-  }
-}
-//400-==========================================
-@media only screen and (max-width: 400px) {
-  .topBarCon {
     .sideBar {
-      width: 80vw;
+      height: 200vh;
+      width: 40vw;
+      margin-top: 370px;
 
       .drawerSliderWrapper {
-        gap: 20px;
-        margin-top: 22px;
-        margin-left: 12px;
-
-        .sliderItems {
-          width: 190px;
-
-          .sliderListIcons {
-            font-size: 30px;
-          }
-
-          .sliderListItem {
-            font-size: 24px;
-          }
-        }
-      }
-
-      .clearIcon {
-        font-size: 40px;
-      }
-    }
-  }
-}
-
-@media only screen and (max-width: 900px) {
-  .topBarCon {
-    .sideBar {
-      width: 30vw;
-      // height: 300vh;
-
-      .drawerSliderWrapper {
-        gap: 30px;
-        margin-top: 22px;
-        margin-left: 10px;
-
+        margin-top: 18px;
         .sliderItems {
           width: 100%;
 
           .sliderListIcons {
-            font-size: 26px;
+            font-size: 32px;
           }
 
           .sliderListItem {
@@ -358,43 +236,70 @@
           }
         }
       }
-
       .clearIcon {
-        font-size: 36px;
+        font-size: 35px;
+        margin-top: 26px;
+      }
+    }
+
+    .topLeft {
+      flex: 1.4;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      // background-color: green;
+      margin-left: 20px;
+    }
+
+    .topCenter {
+      // background-color: red;
+      padding-left: 60px;
+    }
+
+    .topRight {
+      flex: 1;
+      // background-color: pink;
+      .topList {
+        display: none;
       }
     }
   }
 }
 
-//800============================================
-
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 900px) {
   .topBarCon {
+    .topCenter {
+      display: none;
+    }
     .sideBar {
+      height: 200vh;
       width: 40vw;
-      height: 300vh;
+      margin-top: 370px;
 
       .drawerSliderWrapper {
-        gap: 30px;
-        margin-top: 22px;
-        margin-left: 20px;
-
+        margin-top: 18px;
         .sliderItems {
           width: 100%;
 
           .sliderListIcons {
-            font-size: 34px;
+            font-size: 32px;
           }
 
           .sliderListItem {
-            font-size: 26px;
+            font-size: 22px;
           }
         }
       }
-
       .clearIcon {
-        font-size: 42px;
+        font-size: 35px;
+        margin-top: 26px;
       }
+    }
+
+    .topRight {
+      flex: 0.3;
+      // background-color: pink;
+      margin-left: 30px;
     }
   }
 }
@@ -402,14 +307,12 @@
 @media only screen and (max-width: 700px) {
   .topBarCon {
     .sideBar {
-      width: 60vw;
-      height: 300vh;
+      height: 500vh;
+      width: 220vw;
+
+      margin-top: 370px;
 
       .drawerSliderWrapper {
-        gap: 40px;
-        margin-top: 22px;
-        margin-left: 30px;
-
         .sliderItems {
           width: 100%;
 
@@ -418,13 +321,14 @@
           }
 
           .sliderListItem {
-            font-size: 38px;
+            font-size: 26px;
+            margin-left: 10px;
           }
         }
       }
-
       .clearIcon {
-        font-size: 46px;
+        font-size: 50px;
+        margin-top: 30px;
       }
     }
   }
@@ -432,81 +336,68 @@
 
 @media only screen and (max-width: 600px) {
   .topBarCon {
-    .barIcon {
-      display: block;
-      font-size: 26px;
-    }
     .sideBar {
-      margin-left: -20px;
-      color: white;
-      height: 100vh;
-      width: 32vw;
+      height: 500vh;
+      width: 220vw;
+
+      margin-top: 370px;
 
       .drawerSliderWrapper {
-        gap: 20px;
-        margin-top: 12px;
-        margin-left: 20px;
-
         .sliderItems {
-          display: flex;
-          align-items: center;
-          gap: 8px;
-          cursor: pointer;
-          width: 180px;
-          padding: 5px;
-          border-radius: 20px;
+          width: 100%;
 
           .sliderListIcons {
-            font-size: 20px;
+            font-size: 40px;
           }
 
           .sliderListItem {
-            font-size: 16px;
+            font-size: 26px;
+            margin-left: 10px;
           }
         }
       }
-
       .clearIcon {
-        cursor: pointer;
-        font-size: 32px;
-        margin-left: 20px;
-        margin-top: 10px;
+        font-size: 50px;
+        margin-top: 30px;
       }
-    }
-    .topLeft,
-    .topCenter,
-    .topRight,
-    .searchCon {
-      display: none;
     }
   }
 }
 
 @media only screen and (max-width: 500px) {
   .topBarCon {
+    .topRight {
+      flex: 0.3;
+      margin-left: 70px;
+
+      .topImg {
+        width: 55px;
+        height: 55px;
+        margin-top: 10px;
+      }
+    }
     .sideBar {
-      width: 60vw;
+      height: 500vh;
+      width: 220vw;
+      margin-top: 370px;
 
       .drawerSliderWrapper {
-        gap: 20px;
-        margin-top: 22px;
-        margin-left: 12px;
-
         .sliderItems {
-          width: 190px;
+          width: 100%;
 
           .sliderListIcons {
-            font-size: 30px;
+            font-size: 58px;
           }
 
           .sliderListItem {
-            font-size: 24px;
+            font-size: 36px;
+            margin-left: 10px;
           }
         }
       }
-
       .clearIcon {
-        font-size: 40px;
+        font-size: 65px;
+        margin-top: 20px;
       }
     }
   }
@@ -514,60 +405,51 @@
 
 @media only screen and (max-width: 400px) {
   .topBarCon {
-    .sideBar {
-      width: 80vw;
+    margin-top: 30px;
+    .topRight {
+      flex: 0.3;
+      margin-left: 70px;
 
-      .drawerSliderWrapper {
-        gap: 20px;
-        margin-top: 22px;
-        margin-left: 12px;
-
-        .sliderItems {
-          width: 190px;
-
-          .sliderListIcons {
-            font-size: 30px;
-          }
-
-          .sliderListItem {
-            font-size: 24px;
-          }
-        }
-      }
-
-      .clearIcon {
-        font-size: 40px;
+      .topImg {
+        width: 70px;
+        height: 70px;
+        margin-left: -30px;
       }
     }
-  }
-}
 
-@media only screen and (max-width: 300px) {
-  .topBarCon {
     .sideBar {
-      width: 250vw;
-      height: 300vh;
+      height: 500vh;
+      width: 220vw;
+      margin-top: 370px;
 
       .drawerSliderWrapper {
-        gap: 30px;
-        margin-top: 22px;
-        margin-left: 22%;
-
         .sliderItems {
           width: 100%;
 
           .sliderListIcons {
-            font-size: 50px;
+            font-size: 58px;
           }
 
           .sliderListItem {
-            font-size: 42px;
+            font-size: 36px;
+            margin-left: 10px;
           }
         }
       }
-
       .clearIcon {
-        font-size: 40px;
+        font-size: 65px;
+        margin-top: 20px;
+      }
+    }
+
+    .barIcon {
+      font-size: 70px;
+    }
+
+    .topLeft {
+      .searchCon {
+        width: 250px;
+        height: 64px;
       }
     }
   }
