--- a/client/src/components/deleteAlert/deleteAlert.scss
+++ b/client/src/components/deleteAlert/deleteAlert.scss
@@ -1,15 +1,19 @@
 .deleteContainer {
     height: 100px;
     width: 200px;
-    background-color: grey;
+    background-color: rgb(149, 148, 148);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
+    border-radius: 10px;
+    padding-left: 30px;
 
     .areYouSure {
-        font-size: 24px;
+        font-size: 16px;
         font-weight: 500;
+        
     }
 
     .nuYesRow {
