--- a/client/src/pages/login/login.scss
+++ b/client/src/pages/login/login.scss
@@ -1,51 +1,71 @@
 .login {
-    .loginWrapper {
-        .formContainer {
-            width: 500px;
-            height: 500px;
-            display: flex;
-            flex-direction: column;
-            margin-left: 34%;
-            margin-top: 100px;
+  .loginWrapper {
+    .formContainer {
+      width: 500px;
+      height: 500px;
+      display: flex;
+      flex-direction: column;
+      margin-left: 34%;
+      margin-top: 100px;
 
-            .labelText {
-                font-size: 20px;
+      .labelText {
+        font-size: 20px;
 
-                margin-bottom: 10px;
-            }
-            .loginInput {
-                height: 40px;
-                margin-bottom: 18px;
-                outline: none;
-                font-size: 16px;
-                border-radius: 10px;
-                padding-left: 10px;
-                border:none;
-                border: 1.5px solid teal;
-            }
-            .dontHaveAccountTxt {
-                font-size: 16px;
-                margin-top: 20px;
-                margin-bottom: 20px;
-                cursor: pointer;
-            }
+        margin-bottom: 10px;
+      }
+      .loginInput {
+        height: 40px;
+        margin-bottom: 18px;
+        outline: none;
+        font-size: 16px;
+        border-radius: 10px;
+        padding-left: 10px;
+        border: none;
+        border: 1.5px solid teal;
+      }
+      .dontHaveAccountTxt {
+        font-size: 16px;
+        margin-top: 20px;
+        margin-bottom: 20px;
+        cursor: pointer;
+      }
 
-            .loginButton {
-                height: 40px;
-                margin-bottom: 18px;
-                outline: none;
-                font-size: 18px;
-                border-radius: 10px;
-                padding-left: 10px;
-                font-weight: 600;
-                background-color: teal;
-                border: none;
-                color: white;
-            }
+      .loginButton {
+        height: 40px;
+        margin-bottom: 18px;
+        outline: none;
+        font-size: 18px;
+        border-radius: 10px;
+        padding-left: 10px;
+        font-weight: 600;
+        background-color: teal;
+        border: none;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
-            .loginButton:disabled{
-                cursor: not-allowed;
-            }
-        }
+      .loginButton1 {
+        width: 100%;
+        height: 40px;
+        margin-bottom: 18px;
+        outline: none;
+        font-size: 18px;
+        border-radius: 10px;
+        padding-left: 10px;
+        font-weight: 600;
+        background-color: teal;
+        border: none;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .loginButton:disabled {
+        cursor: not-allowed;
+      }
     }
+  }
 }
