--- a/client/src/pages/register/register.css
+++ b/client/src/pages/register/register.css
@@ -48,6 +48,28 @@ form {
   margin-top: 20px;
   font-size: 18px;
 }
+.alreadyAcc{
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.loginButton1 {
+  width: 100%;
+  height: 40px;
+  margin-bottom: 18px;
+  outline: none;
+  font-size: 18px;
+  border-radius: 10px;
+  padding-left: 10px;
+  font-weight: 600;
+  background-color: teal;
+  border: none;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10px;
+}
 
 /* 550===================================== */
 @media only screen and (max-width: 600px) {
