--- a/client/src/pages/write/write.scss
+++ b/client/src/pages/write/write.scss
@@ -6,6 +6,8 @@
 
   .writeForm {
     margin-left: 300px;
+    // background-color: yellow;
+    height: 200vh;
     .writePostImg {
       width: 1000px;
 
@@ -21,6 +23,11 @@
         font-size: 30px;
         cursor: pointer;
         color: teal;
+
+        .selectImg{
+          font-size: 18px;
+          margin-top: 10px;
+        }
       }
       .titleInput {
         font-size: 30px;
@@ -28,6 +35,9 @@
         border: none;
         outline: none;
         width: 900px;
+        border: 1px solid grey;
+        height: 60px;
+        border-radius: 5px;
       }
     }
 
@@ -41,6 +51,7 @@
         border: 1px solid grey;
         height: 150px;
         width: 900px;
+        border-radius: 5px;
       }
     }
     .locationInput {
@@ -51,17 +62,20 @@
       font-family: "Varela", sans-serif;
       border: 1px solid grey;
       width: 400px;
+      border-radius: 5px;
+      height: 40px;
     }
+
     .publishButton {
       background-color: teal;
       border: none;
       border-radius: 10px;
-      font-size: 14px;
+      font-size: 18px;
       font-weight: 500;
       cursor: pointer;
       color: white;
-      width: 100px;
-      height: 38px;
+      width: 200px;
+      height: 44px;
       margin-top: 30px;
     }
   }
